--- a/client/src/components/common/Footer/Footer.module.scss
+++ b/client/src/components/common/Footer/Footer.module.scss
@@ -1,6 +1,10 @@
+@import '../../../styles/variables.scss';
+
 .footer {
     position: fixed;
 	bottom:0;
 	width:100%;
     height: 25px;
+    background-color: $mainBackground !important;
+    color: $text;
 }
